# fly-on-the-wall

./: .gitignore  CNAME  CONTRIBUTING.md  README.md  bot.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  release.yml
cli/: .env.example  .gitignore  recorder.py
desktop/: .eslintrc.json  forge.config.ts  index.html  knip.json  package-lock.json  package.json  stylelint.config.mjs  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts  vite.utility.config.ts
desktop/src/: index.css  main.ts  preload.ts  renderer.ts  utils.ts  worker-client.ts  worker.ts
desktop/src/main/: app.ts  config.ts  exportedNote.ts  main.ts  models.ts  notifications.ts  recordings.ts  summarization-manager.ts  sync-manager.ts  transcription-manager.ts  userData.ts
desktop/src/preload/: preload.ts
desktop/src/renderer/: index.css  index.html  index.ts  utils.ts
desktop/src/shared/: config.ts  electronAPI.d.ts  hotkeys.ts  utilityProcess.d.ts
desktop/src/summarization/: index.ts  pipeline.ts  utility-process.ts
desktop/src/transcription/: index.ts  utility-process.ts  whisper.ts
server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  sqlc.yaml
server/cmd/web/: config.go  main.go
server/internal/admin/: admin.go
server/internal/api/: api.go
server/internal/auth/: auth.go
server/internal/billing/: billing.go
server/internal/database/: database.go  models.go
server/migrations/: 001_initial.up.sql
server/templates/: devices.html
www/: index.html  site.webmanifest
(+107 files in other folders)
