[project]
name = "discord-meeting-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.3.2",
    "attrs==25.3.0",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "filelock==3.18.0",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "llvmlite==0.44.0",
    "markupsafe==3.0.2",
    "more-itertools==10.7.0",
    "mpmath==1.3.0",
    "multidict==6.5.0",
    "networkx==3.5",
    "numba==0.61.2",
    "numpy==2.2.6",
    "openai-whisper==20240930",
    "propcache==0.3.2",
    "py-cord==2.6.1",
    "pycparser==2.22",
    "pynacl==1.5.0",
    "python-dotenv==1.1.0",
    "regex==2024.11.6",
    "requests==2.32.4",
    "setuptools==80.9.0",
    "sympy==1.14.0",
    "tiktoken==0.9.0",
    "torch==2.7.1",
    "tqdm==4.67.1",
    "typing-extensions==4.14.0",
    "urllib3==2.5.0",
    "yarl==1.20.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
