[project]
name = "discord-meeting-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "openai-whisper>=20240930",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sounddevice>=0.4.6",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
